tests/fixtures/typeck/non_bool_condition.veyl
fn main() {
    if 1 {
        print("bad");
    }
}
